Add watch functionality to the build tool for development
- Make src/js/home.js consistent with the current production build...
- Freeze version of build tool dependencies

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "url": "https://github.com/XrXr/WhenIsKateLive"
     },
     "devDependencies": {
-        "clean-css": ">=3.3.2",
-        "fs-extra": ">=0.19.0"
+        "clean-css": "3.3.2",
+        "fs-extra": "0.19.0",
+        "node-watch": "0.3.4",
+        "colors": "1.1.0"
     }
 }
