--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-    "name": "when-is-kate-live",
-    "version": "0.0.10",
-    "license": "MIT",
-    "scripts": {
-        "build": "node ./build_tools/build.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/XrXr/WhenIsKateLive"
-    },
-    "devDependencies": {
-        "clean-css": "3.3.2",
-        "fs-extra": "0.19.0",
-        "node-watch": "0.3.4",
-        "colors": "1.1.0"
-    }
+  "name": "when-is-kate-live",
+  "version": "0.0.10",
+  "license": "MIT",
+  "scripts": {
+    "build": "node ./build_tools/build.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/XrXr/WhenIsKateLive"
+  },
+  "devDependencies": {
+    "acorn": "2.1.0",
+    "clean-css": "3.3.2",
+    "colors": "1.1.0",
+    "fs-extra": "0.19.0",
+    "node-watch": "0.3.4"
+  }
 }
