--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "clean-css": "3.3.2",
     "colors": "1.1.0",
     "fs-extra": "0.19.0",
-    "node-watch": "0.3.4"
+    "gulp": "^3.9.0",
+    "gulp-livereload": "^3.8.1",
+    "node-watch": "0.3.4",
+    "rollup": "^0.20.5"
   }
 }
