--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs-extra": "0.19.0",
     "gulp": "^3.9.0",
     "gulp-minify-css": "^1.2.1",
+    "gulp-uglify": "^1.4.2",
     "node-watch": "0.3.4",
     "rollup": "^0.20.5"
   }
