--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "colors": "1.1.0",
     "fs-extra": "0.19.0",
     "gulp": "^3.9.0",
-    "gulp-minify-css": "^1.2.1",
+    "gulp-clean-css": "^2.0.10",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.4.2",
     "node-watch": "0.3.4",
